# Clarity

./: .gitattributes  .gitignore  BEGINNERS_GUIDE.md  CONTRIBUTING.md  Clarity.terminal  GAPS.md  MAC_SETUP_GUIDE.md  README.md  ROADMAP_OS.md  build_standalone.py  clarity-terminal  install.sh  pyproject.toml  setup-mac.sh  setup.py
Formula/: clarity.rb
clarity/: __init__.py  __main__.py  bytecode.py  cli.py  debugger.py  docgen.py  formatter.py  interpreter.py  lexer.py  linter.py  lsp.py  package.py  parser.py  profiler.py  runtime.py  type_checker.py
docs/: index.html  reference.html  tutorial.html
editors/: clarity.tmLanguage.json
examples/: async_generators.clarity  classes.clarity  control_flow.clarity  data.clarity  fileio.clarity  functions.clarity  hello.clarity  patterns.clarity
native/: ast_nodes.py  build.sh  errors.py  lexer.py  parser.py  runtime.js  smoke_test.sh  tokens.py  transpile.py
playground/: index.html
registry/: Dockerfile  docker-compose.yml
stdlib/: ast_nodes.clarity  benchmark.clarity  build.clarity  bytecode.clarity  channel.clarity  claude.clarity  cli.clarity  collections.clarity  completer.clarity  crypto.clarity  datetime.clarity  db.clarity  debugger.clarity  docgen.clarity  formatter.clarity  highlight.clarity  install.clarity  interpreter.clarity  lexer.clarity  linter.clarity  lsp.clarity  mutex.clarity  net.clarity  package.clarity  parser.clarity  path.clarity  pretty.clarity  process.clarity  profiler.clarity  registry.clarity  repl.clarity  runtime.clarity  runtime_gen.clarity  runtime_spec.clarity  semver.clarity  (+22 more)
(+29 files in other folders)
