[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clarity-lang"
version = "0.5.0"
description = "Clarity — A simple yet powerful programming language"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    {name = "Clarity Contributors"},
]
keywords = ["programming-language", "interpreter", "clarity", "language", "scripting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/monkdim/Clarity"
Repository = "https://github.com/monkdim/Clarity"
Issues = "https://github.com/monkdim/Clarity/issues"

[project.scripts]
clarity = "clarity.cli:main"

[tool.setuptools.packages.find]
include = ["clarity*"]
exclude = ["tests*", "examples*"]
